syntax = "proto3";

service BoxFactory {
    rpc CheckOpen(Empty) returns (BoolValue) {}
    rpc MakeBox(Spec) returns (Box) {}
} 

service StoreFront {
    rpc CheckOnline(Empty) returns (BoolValue) {}
    rpc PlaceOrder (stream Order) returns (stream Delivery) {}
}

message Order {
    int32 orderNumber = 1;
    Spec spec = 2;
}

message Delivery {
    int32 orderNumber = 1;
    Box box = 2;
}

message Spec {
    int32 height = 1;
    int32 width = 2;
    int32 depth = 3;
}

message Box {
    int32 volume = 2;
}

message BoolValue {
    // The bool value.
    bool value = 1;
}
  
message Empty {}
